// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders signup and signin forms 1`] = `
<div>
  <div
    class="userCounter"
  >
    Online: 
    0
  </div>
  <nav
    class="header"
  >
    <ul
      class="menu"
    >
      <li
        class="menu__item"
      >
        You are 
        anon
      </li>
      <li
        class="menu__item"
      >
        <a
          class="pseudo"
          href="#"
        >
          Login
        </a>
      </li>
      <li
        class="menu__item"
      >
        <a
          class="pseudo"
          href="#"
        >
          Sign up
        </a>
      </li>
    </ul>
  </nav>
  <div
    style="display: none;"
  >
    <div
      class="loginForm"
      id="loginForm"
    >
      <form>
        <label
          class="loginForm__label"
        >
          Username: 
          <input
            id="loginUsername"
            name="loginUsername"
            required=""
            type="text"
            value=""
          />
        </label>
        <label
          class="loginForm__label"
        >
          Password: 
          <input
            id="loginPassword"
            name="loginPassword"
            required=""
            type="password"
            value=""
          />
        </label>
        <button
          class="btn btn--secondary"
          type="submit"
        >
          Login
        </button>
      </form>
      <span
        class="error"
      />
    </div>
  </div>
  <div
    style="display: none;"
  >
    <div
      class="signUpForm"
      id="signUpForm"
    >
      <form>
        <label
          class="signUpForm__label"
        >
          Username: 
          <input
            id="signupUsername"
            name="signupUsername"
            required=""
            type="text"
            value=""
          />
        </label>
        <label
          class="signUpForm__label"
        >
          Password: 
          <input
            id="signupPassword"
            name="signupPassword"
            required=""
            type="password"
            value=""
          />
        </label>
        <button
          class="btn btn--secondary"
          type="submit"
        >
          Sign up
        </button>
      </form>
      <span
        class="error"
      />
    </div>
  </div>
  <div
    class="chatForm"
  >
    <form>
      <input
        autocomplete="off"
        class="chatForm__input"
        id="newMessageText"
        name="newMessageText"
        required=""
        type="text"
        value=""
      />
      <button
        class="btn btn--main"
        id="sendMessage"
        type="submit"
      >
        Send
      </button>
    </form>
  </div>
  <div>
    <ul
      class="messageList"
    />
  </div>
</div>
`;

exports[`Renders signup and signin forms 2`] = `
<div>
  <div
    class="userCounter"
  >
    Online: 
    0
  </div>
  <nav
    class="header"
  >
    <ul
      class="menu"
    >
      <li
        class="menu__item"
      >
        You are 
        anon
      </li>
      <li
        class="menu__item"
      >
        <a
          class="pseudo"
          href="#"
        >
          Login
        </a>
      </li>
      <li
        class="menu__item"
      >
        <a
          class="pseudo"
          href="#"
        >
          Sign up
        </a>
      </li>
    </ul>
  </nav>
  <div
    style="display: block;"
  >
    <div
      class="loginForm"
      id="loginForm"
    >
      <form>
        <label
          class="loginForm__label"
        >
          Username: 
          <input
            id="loginUsername"
            name="loginUsername"
            required=""
            type="text"
            value=""
          />
        </label>
        <label
          class="loginForm__label"
        >
          Password: 
          <input
            id="loginPassword"
            name="loginPassword"
            required=""
            type="password"
            value=""
          />
        </label>
        <button
          class="btn btn--secondary"
          type="submit"
        >
          Login
        </button>
      </form>
      <span
        class="error"
      />
    </div>
  </div>
  <div
    style="display: none;"
  >
    <div
      class="signUpForm"
      id="signUpForm"
    >
      <form>
        <label
          class="signUpForm__label"
        >
          Username: 
          <input
            id="signupUsername"
            name="signupUsername"
            required=""
            type="text"
            value=""
          />
        </label>
        <label
          class="signUpForm__label"
        >
          Password: 
          <input
            id="signupPassword"
            name="signupPassword"
            required=""
            type="password"
            value=""
          />
        </label>
        <button
          class="btn btn--secondary"
          type="submit"
        >
          Sign up
        </button>
      </form>
      <span
        class="error"
      />
    </div>
  </div>
  <div
    class="chatForm"
  >
    <form>
      <input
        autocomplete="off"
        class="chatForm__input"
        id="newMessageText"
        name="newMessageText"
        required=""
        type="text"
        value=""
      />
      <button
        class="btn btn--main"
        id="sendMessage"
        type="submit"
      >
        Send
      </button>
    </form>
  </div>
  <div>
    <ul
      class="messageList"
    />
  </div>
</div>
`;

exports[`Renders signup and signin forms 3`] = `
<div>
  <div
    class="userCounter"
  >
    Online: 
    0
  </div>
  <nav
    class="header"
  >
    <ul
      class="menu"
    >
      <li
        class="menu__item"
      >
        You are 
        anon
      </li>
      <li
        class="menu__item"
      >
        <a
          class="pseudo"
          href="#"
        >
          Login
        </a>
      </li>
      <li
        class="menu__item"
      >
        <a
          class="pseudo"
          href="#"
        >
          Sign up
        </a>
      </li>
    </ul>
  </nav>
  <div
    style="display: none;"
  >
    <div
      class="loginForm"
      id="loginForm"
    >
      <form>
        <label
          class="loginForm__label"
        >
          Username: 
          <input
            id="loginUsername"
            name="loginUsername"
            required=""
            type="text"
            value=""
          />
        </label>
        <label
          class="loginForm__label"
        >
          Password: 
          <input
            id="loginPassword"
            name="loginPassword"
            required=""
            type="password"
            value=""
          />
        </label>
        <button
          class="btn btn--secondary"
          type="submit"
        >
          Login
        </button>
      </form>
      <span
        class="error"
      />
    </div>
  </div>
  <div
    style="display: block;"
  >
    <div
      class="signUpForm"
      id="signUpForm"
    >
      <form>
        <label
          class="signUpForm__label"
        >
          Username: 
          <input
            id="signupUsername"
            name="signupUsername"
            required=""
            type="text"
            value=""
          />
        </label>
        <label
          class="signUpForm__label"
        >
          Password: 
          <input
            id="signupPassword"
            name="signupPassword"
            required=""
            type="password"
            value=""
          />
        </label>
        <button
          class="btn btn--secondary"
          type="submit"
        >
          Sign up
        </button>
      </form>
      <span
        class="error"
      />
    </div>
  </div>
  <div
    class="chatForm"
  >
    <form>
      <input
        autocomplete="off"
        class="chatForm__input"
        id="newMessageText"
        name="newMessageText"
        required=""
        type="text"
        value=""
      />
      <button
        class="btn btn--main"
        id="sendMessage"
        type="submit"
      >
        Send
      </button>
    </form>
  </div>
  <div>
    <ul
      class="messageList"
    />
  </div>
</div>
`;

exports[`Renders signup and signin forms 4`] = `
<div>
  <div
    class="userCounter"
  >
    Online: 
    0
  </div>
  <nav
    class="header"
  >
    <ul
      class="menu"
    >
      <li
        class="menu__item"
      >
        You are 
        anon
      </li>
      <li
        class="menu__item"
      >
        <a
          class="pseudo"
          href="#"
        >
          Login
        </a>
      </li>
      <li
        class="menu__item"
      >
        <a
          class="pseudo"
          href="#"
        >
          Sign up
        </a>
      </li>
    </ul>
  </nav>
  <div
    style="display: none;"
  >
    <div
      class="loginForm"
      id="loginForm"
    >
      <form>
        <label
          class="loginForm__label"
        >
          Username: 
          <input
            id="loginUsername"
            name="loginUsername"
            required=""
            type="text"
            value=""
          />
        </label>
        <label
          class="loginForm__label"
        >
          Password: 
          <input
            id="loginPassword"
            name="loginPassword"
            required=""
            type="password"
            value=""
          />
        </label>
        <button
          class="btn btn--secondary"
          type="submit"
        >
          Login
        </button>
      </form>
      <span
        class="error"
      />
    </div>
  </div>
  <div
    style="display: none;"
  >
    <div
      class="signUpForm"
      id="signUpForm"
    >
      <form>
        <label
          class="signUpForm__label"
        >
          Username: 
          <input
            id="signupUsername"
            name="signupUsername"
            required=""
            type="text"
            value=""
          />
        </label>
        <label
          class="signUpForm__label"
        >
          Password: 
          <input
            id="signupPassword"
            name="signupPassword"
            required=""
            type="password"
            value=""
          />
        </label>
        <button
          class="btn btn--secondary"
          type="submit"
        >
          Sign up
        </button>
      </form>
      <span
        class="error"
      />
    </div>
  </div>
  <div
    class="chatForm"
  >
    <form>
      <input
        autocomplete="off"
        class="chatForm__input"
        id="newMessageText"
        name="newMessageText"
        required=""
        type="text"
        value=""
      />
      <button
        class="btn btn--main"
        id="sendMessage"
        type="submit"
      >
        Send
      </button>
    </form>
  </div>
  <div>
    <ul
      class="messageList"
    />
  </div>
</div>
`;
